tests/ui/asm/inline-asm-with-regions-in-sym.bad.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/inline-asm-with-regions-in-sym.rs:16:26
   |
LL |         asm!("/* {} */", sym dep::<'a, T> );
   |                          ^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn test<'a: 'a, T: 'a>() {
   |                  ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
